--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,8 @@ header .navbar .col ul li{
 header .navbar .col ul li a{
   text-decoration: none;
   height: 100%;
-  font-size: 20px;
+  font-size: 16px;
 }
-
-
 
 header .navbar .col ul li a:not(.txt-white){
   color: black;
@@ -108,6 +106,10 @@ main{
   margin-bottom: 77px;
 }
 
+#jumbotron .jumbo-box .jumbo-bottom{
+  justify-content: space-between;
+}
+
 #jumbotron .jumbo-box h1{
   font-size: 5rem;
   padding-right: 126px;
@@ -116,10 +118,25 @@ main{
 
 #jumbotron .jumbo-box .j-txt{
   width: 30%;
+  font-size: 16px;
+}
+
+#jumbotron .jumbo-box .j-txt p{
+  margin: 32px 0;
+}
+
+#jumbotron .jumbo-box .j-txt a{
+  text-decoration: none;
+  padding: 14px 16px;
 }
 
 #jumbotron .jumbo-box .j-img{
   width: 70%;
+}
+
+#jumbotron .jumbo-box .j-img img{
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /*--------------Sections--------------*/
