[add] package cards and partner box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,12 @@
 }
 
 body{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 .debug{
@@ -21,6 +26,15 @@ body{
   color: white;
   background-color: #0061FF;
   padding: 8px 16px;
+  text-decoration: none;
+}
+
+.btn-white{
+  color: black;
+  background-color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  border: 1px solid black;
 }
 
 /*---------------HEADER----------------*/
@@ -100,6 +114,9 @@ main{
   width: 1170px;
   height: 690px;
   margin: 0 auto;
+  position: absolute;
+  top: 12%;
+  left: 20%
 }
 
 #jumbotron .jumbo-box .jumbo-top{
@@ -134,12 +151,15 @@ main{
   width: 70%;
 }
 
-#jumbotron .jumbo-box .j-img img{
+img{
   max-width: 100%;
   max-height: 100%;
 }
 
 /*--------------Sections--------------*/
+.blue{
+  color: #0061FF;
+}
 
 .container{
   max-width: 1000px;
@@ -149,6 +169,19 @@ main{
 .container h2{
   font-size: 3rem;
   width: 100%;
+}
+
+.container h3{
+  font-size: 1.4rem;
+}
+
+.container h4{
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.container h5{
+  font-size: 0.9rem;
 }
 
 .row{
@@ -189,10 +222,47 @@ main{
 
 .offer{
   height: 821px;
+  padding: 24px;
+  position: relative;
 }
 
-.offer.large{
+.offer-large{
   height: 260px;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 30px 30px;
+}
+
+.offer-large p{
+  font-size: 0.9rem;
+}
+
+.offer h3,
+.offer h5,
+.offer ul li {
+  margin-bottom: 28px;
+}
+
+.offer li{
+  font-size: 14px;
+}
+
+
+
+.offer p:first-child{
+  margin-top: 54px;
+}
+
+.offer p:last-child{
+  margin: 36px 0 34px 0;
+}
+
+.line{
+  border: 1px solid #E1E1E3;
+  width: 20%;
+  height: 1px;
+  margin-bottom: 35px;
 }
 
 .partner{
@@ -211,6 +281,11 @@ main{
 .partner-txt{
   width: 40%;
   height: 510px;
+  padding: 40px;
+}
+
+.partner-txt p{
+  margin: 20px 0 40px 0;
 }
 
 .business-title{
